components/SideBar/styles.module.css
.SideBarContainer {
  display: flex;
  height: 100vh;
  position: relative;
  width: 400px;
  background-color: #8c1d18;
  transition: width 0.2 ease;
  border-right: 2px solid var(--border-color);
}

.collapsed {
  width: 60px;
}

.contents {
  flex: 1;
  padding: 10px;
}

.ToggleButton {
  padding-left: var(--spacing-xs);
  position: absolute;
  top: 50%;
  right: -32px;
  transform: translateY(-50%);
  width: var(--spacing-lg);
  height: var(--spacing-lg);
  border-top-left-radius: 0;
  border-top-right-radius: var(--spacing-sm);
  border-bottom-right-radius: var(--spacing-sm);
  border-bottom-left-radius: 0;

  cursor: pointer;
  background-color: white;

  border-top: var(--spacing-border) solid #d8c3a5;
  border-right: var(--spacing-border) solid #d8c3a5;
  border-bottom: var(--spacing-border) solid #d8c3a5;
  border-left: 0px;
}

